implements ListTransactionsResponseDTO
